Add support for machine controller to execute terraform on the master machine

--- a/cluster-api-gcp/machine-controller/Dockerfile
+++ b/cluster-api-gcp/machine-controller/Dockerfile
@@ -5,5 +5,7 @@ RUN echo "StrictHostKeyChecking no" >> /etc/ssh/ssh_config
 
 RUN echo "UserKnownHostsFile /dev/null" >> /etc/ssh/ssh_config
 ADD machine-controller /bin
+ADD bin/terraform_0.11.3_linux_amd64 /bin/terraform
+ADD templates/gcp-instance.tf /bin/gcp-instance.tf
 
 ENTRYPOINT ["/bin/machine-controller"]
